v2 of mkdor for tmp on startup